# ftrader

./: .env.example  .gitignore  README.md  README_WEB.md  config.yaml  pyproject.toml  pytest.ini  restart.sh  run.py  start.sh  start_web.py  status.sh  stop.sh
docs/: llm_strategy.md  llm_strategy_config_example.yaml  random_forest_strategy.md  retrain_model.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: account.ts  backtest.ts  client.ts  strategies.ts  templates.ts  websocket.ts
frontend/src/router/: index.ts
frontend/src/stores/: apiConfig.ts
frontend/src/types/: index.ts
frontend/src/views/: Account.vue  Backtest.vue  Dashboard.vue  Strategies.vue  StrategyDetail.vue  StrategyHistory.vue
src/ftrader/: __init__.py  backtester.py  config.py  database.py  exchange.py  exchange_manager.py  main.py  risk_manager.py  strategy.py  strategy_manager.py  strategy_templates.py  tasks.py  web_server.py
src/ftrader/api/: account.py  backtest.py  strategies.py  templates.py  websocket.py
src/ftrader/models/: __init__.py  account.py  backtest.py  position.py  strategy.py  trade.py
src/ftrader/strategies/: __init__.py  base.py  llm_strategy.py  martingale.py  random_forest.py
src/ftrader/tests/: README.md  TESTING_STRATEGY.md  _pytest_mock_setup.py  conftest.py  test_account_api.py  test_martingale_strategy.py  test_strategy_manager.py
